--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,7 @@ DESS_AUTH_PASSWORD=
 DESS_AUTH_PASSWORD_HASH=
 DESS_DEVICE_PN=
 DESS_DEVICE_SN=
+DESS_DEVICE_DEVCODE=
+DESS_DEVICE_DEVADDRESS=
 PORT=3000
 HOST=0.0.0.0
