--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@ DESS_AUTH_PASSWORD_HASH=
 DESS_DEVICE_PN=
 DESS_DEVICE_SN=
 DESS_DEVICE_DEVCODE=
-DESS_DEVICE_DEVADDRESS=
+DESS_DEVICE_DEVADDR=
 PORT=3000
 HOST=0.0.0.0
