--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,9 @@ version: "3.9"
 
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: antoxa1081/smart-ess-api-gateway
     restart: unless-stopped
     ports:
       - "8000:3000"
-
+    volumes:
+      - ./.env:/src/app/.env
