--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "0.19.0",
     "dotenv": "^16.4.5",
     "dotenv-flow": "^4.1.0",
-    "fastify": "^4.26.2"
+    "fastify": "^4.26.2",
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
