--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "start:dev": "nodemon ./src/main.ts"
   },
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
     "axios": "0.19.0",
     "dotenv": "^16.4.5",
     "dotenv-flow": "^4.1.0",
-    "fastify": "^4.26.2",
+    "fastify": "^5.3.3",
     "prom-client": "^15.1.3"
   },
   "devDependencies": {
